--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   application:
     name: mscartoes
+  rabbitmq:
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
 
 server:
   port: 0
-
 eureka:
   client:
     register-with-eureka: true
@@ -12,3 +16,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
+
+mq:
+  queues:
+    emissao-cartoes: "emissao-cartoes"
+
