--- a/msclientes/pom.xml
+++ b/msclientes/pom.xml
@@ -15,6 +15,7 @@
 	<description>Clientes microservice</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring-cloud.version>2021.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
