--- a/msgateway/src/main/resources/application.yml
+++ b/msgateway/src/main/resources/application.yml
@@ -21,4 +21,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://curso-eureka-user:curso-eureka-pass@localhost:8761/eureka
