--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -21,3 +21,12 @@ mq:
   queues:
     emissao-cartoes: "emissao-cartoes"
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+logging:
+  charset:
+    file: ./logs/log-file.log
+
