--- a/msavaliadorcredito/src/main/resources/application.yaml
+++ b/msavaliadorcredito/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: msavaliadorcredito
   rabbitmq:
-    host: localhost
+    host: ${RABBITMQ_SERVER}
     port: 5672
     username: guest
     password: guest
@@ -14,7 +14,7 @@ eureka:
   client:
     register-with-eureka: true
     service-url:
-      defaultZone: http://curso-eureka-user:curso-eureka-pass@localhost:8761/eureka
+      defaultZone: http://curso-eureka-user:curso-eureka-pass@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
 
