--- a/mscartoes/src/main/resources/application.yml
+++ b/mscartoes/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: mscartoes
   rabbitmq:
-      host: ${RABBITMQ-SERVER}
+      host: ${RABBITMQ_SERVER}
       port: 5672
       username: guest
       password: guest
@@ -13,7 +13,7 @@ eureka:
   client:
     register-with-eureka: true
     service-url:
-      defaultZone: http://curso-eureka-user:curso-eureka-pass@${EUREKA-SERVER}:8761/eureka
+      defaultZone: http://curso-eureka-user:curso-eureka-pass@${EUREKA_SERVER}:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${spring-cloud.application.instance_id:${random.value}}
 
